[index.html] vercel / netlify route error script added

--- a/index.html
+++ b/index.html
@@ -8,10 +8,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Foodex: Scan your meal!</title>
 	
-  <!--   chat bot iframe   -->
+	<!-- SCRIPT FOR VERCEL / NETLIFY ROUTE ERROR -->
+	<script type="text/javascript">
+		(function (l) {
+		  if (l.search[1] === "/") {
+			var decoded = l.search
+			  .slice(1)
+			  .split("&")
+			  .map(function (s) {
+				return s.replace(/~and~/g, "&");
+			  })
+			  .join("?");
+			window.history.replaceState(
+			  null,
+			  null,
+			  l.pathname.slice(0, -1) + decoded + l.hash
+			);
+		  }
+		})(window.location);
+	  </script>
   
-	
-  <meta name="description" content="Foodifyy: Scan your meal!">
+  	<meta name="description" content="Foodifyy: Scan your meal!">
 	<meta name="Abstract" contetnt="Foodifyy: Scan your meal!">
 	<!-- Facebook Open Graph Tags -->
 	<!-- 1. Title -->
