--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
 <body>
 	
   <!--   chat bot script	 -->
-  <script
+  <!-- <script
    src="https://cdn.jsdelivr.net/gh/yasserelsaid/chatbot@latest/index.min.js"
    id="foodex-chatbot-vcfrl6xma"
-  ></script>
+  ></script> -->
 	
   <div id="root"></div>	
 	
